# nyarnos

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  i386-nyarn.json
.cargo/: config
.github/workflows/: build-code.yml
bootloader/: Cargo.toml  Makefile  linker.ld
bootloader/.cargo/: config
bootloader/src/: boot.S  elf.rs  main.rs  x86.rs
docker/: Dockerfile  docker.sh  entrypoint.sh
kernel/: Cargo.toml  Makefile  linker.ld  test.sh
kernel/.cargo/: config
kernel/src/: console.rs  entry.S  idt.rs  interrupts.rs  lib.rs  main.rs  uart.rs
kernel/src/idt/: entry.rs  handler.rs
xtask/: Cargo.toml
xtask/src/: build.rs  lib.rs  main.rs
